fix: Agent listings toggle buttons/title overlap
@22036578

--- a/public/css/wolfnetAgentPages.less
+++ b/public/css/wolfnetAgentPages.less
@@ -534,6 +534,8 @@
 		.wolfnet_aoListings {
 
 			.wolfnet_aoListingNav {
+				position: relative;
+				z-index: 10;
 				float: right;
 
 				&.wnt-btn-group {
